--- a/app/views/blogs/promocodes.html.erb
+++ b/app/views/blogs/promocodes.html.erb
@@ -12,8 +12,9 @@
         <div class="blog_ctn blog_promocode">
          <ul>
 
-          <!-- <h3>Cateogry</h3>
-          <li>PromoCodes_Full_Link</li> -->
+          <!-- <h3>Beauty & Grooming</h3>
+          <li>Promocodes_HTML</li> -->
+        
           
          </ul>
          <div class="banner">
