--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -173,12 +173,12 @@
 <a target="_blank" href="https://amzn.to/324iCU3" class="overlay-container" data-overlay-text="Printers"><img src="https://images.unsplash.com/photo-1561990975-6cfff5661206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Printers" class="overlay-img" /><p>Printers</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["Categories","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Title" class="overlay-img" /><p>Title</p></a> 
+<div class="filter-node most_box" data-filter='["others","School Supplies"]'>
+<a target="_blank" href="https://amzn.to/34lYxdL" class="overlay-container" data-overlay-text="School Supplies"><img src="https://images.unsplash.com/photo-1516748413653-9829208eeb5b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="School Supplies" class="overlay-img" /><p>School Supplies</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["Categories","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Title" class="overlay-img" /><p>Title</p></a> 
+<div class="filter-node most_box" data-filter='["others","Office Furniture & Lighting"]'>
+<a target="_blank" href="https://amzn.to/2Lq0MnJ" class="overlay-container" data-overlay-text="Office Furniture & Lighting"><img src="https://images.unsplash.com/photo-1560264273-de4cfc40fd0d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Office Furniture & Lighting" class="overlay-img" /><p>Office Furniture & Lighting</p></a> 
 </div>
 
 <!-- Main Categories Five -->
@@ -233,6 +233,26 @@
 
 <div class="filter-node most_box" data-filter='["beauty","Supplements"]'>
 <a target="_blank" href="https://amzn.to/2zHna6t" class="overlay-container" data-overlay-text="Supplements"><img src="https://images.unsplash.com/photo-1558713057-d4b70b091888?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Supplements" class="overlay-img" /><p>Supplements</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Women Fashion"]'>
+<a target="_blank" href="https://amzn.to/2PJ0eie" class="overlay-container" data-overlay-text="Women Fashion"><img src="https://images.unsplash.com/photo-1559563458-527698bf5295?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Women Fashion" class="overlay-img" /><p>Women Fashion</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Men Fashion"]'>
+<a target="_blank" href="https://amzn.to/2NVMnSW" class="overlay-container" data-overlay-text="Men Fashion"><img src="https://images.unsplash.com/photo-1479064555552-3ef4979f8908?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Men Fashion" class="overlay-img" /><p>Men Fashion</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Girls Fashion"]'>
+<a target="_blank" href="https://amzn.to/2Us68CW" class="overlay-container" data-overlay-text="Girls Fashion"><img src="https://images.unsplash.com/photo-1491897554428-130a60dd4757?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Girls Fashion" class="overlay-img" /><p>Girls Fashion</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Boys Fashion"]'>
+<a target="_blank" href="https://amzn.to/2ZNDb5J" class="overlay-container" data-overlay-text="Boys Fashion"><img src="https://images.unsplash.com/photo-1503919545889-aef636e10ad4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Boys Fashion" class="overlay-img" /><p>Boys Fashion</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["beauty","Baby Fashion"]'>
+<a target="_blank" href="https://amzn.to/2UtGsFZ" class="overlay-container" data-overlay-text="Baby Fashion"><img src="https://images.unsplash.com/photo-1519340241574-2cec6aef0c01?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Baby Fashion" class="overlay-img" /><p>Baby Fashion</p></a> 
 </div>
 
 <!-- Main Categories Six -->
