--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,6 +48,181 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+<div class="card clearfix" data-score="10" data-price="17.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MTj5VF"><img src="https://m.media-amazon.com/images/I/61Oe93LNT4L._SR400,400_.jpg" alt="Insulated Lunch Container Thermos" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MTj5VF">Insulated Lunch Container Thermos Food Jar Food Storage Container Stainless Steel ZTXPRO Hot & Cold Vacuum Box with ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.09</span><span class="ori_price">$18.99</span></address>
+      <textarea readonly="readonly" class="code_area">10C7O7YV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>10% off at $18.99</strong> with promo code: <strong class="m_codes">10C7O7YV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MTj5VF">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="13.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZGTBkc"><img src="https://m.media-amazon.com/images/I/610JCJAIB2L._SR400,400_.jpg" alt="Coffee Grinder Electric" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZGTBkc">Coffee Grinder Electric, Spice Grinder Blade Grinders with Powerful Stainless Steel Blades and Cleaning Brush for Large...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.79</span><span class="ori_price">$22.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">407CFICN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $22.99</strong> with promo code: <strong class="m_codes">407CFICN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 05, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZGTBkc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="10.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZNPgI7"><img src="https://m.media-amazon.com/images/I/61+xLmce82L._SR400,400_.jpg" alt="UMANOR Instant Read Meat Thermometer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZNPgI7">UMANOR Instant Read Meat Thermometer, Digital Thermometer with Alerts, Backlights Food Thermometer For Kitchen,BBQ, Grill Etc.</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.79</span><span class="ori_price">$23.98</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">558YNQVC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $23.98</strong> with promo code: <strong class="m_codes">558YNQVC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 06, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZNPgI7">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.43">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zQL4wy"><img src="https://m.media-amazon.com/images/I/51mpw-+YFEL._SR400,400_.jpg" alt="Wine Glass with Handle Stainless" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zQL4wy">Wine Glass with Handle Stainless Steel Wine Tumbler with Lid Yiomxhi Double Insulated Mugs Coffee Cup Wine Cup Tumbler for Coffee,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.43</span><span class="ori_price">$14.29</span></address>
+      <textarea readonly="readonly" class="code_area">20W58KXM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $14.29</strong> with promo code: <strong class="m_codes">20W58KXM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 12, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zQL4wy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="41.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zSQd7n"><img src="https://m.media-amazon.com/images/I/71JP6MKIIKL._SR400,400_.jpg" alt="Video Camera Camcorder Digital" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zSQd7n">Video Camera Camcorder Digital YouTube Vlogging Camera Recorder Full HD 1080P 30FPS 24MP 3.0 Inch 270 Degree Rotation...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.99</span><span class="ori_price">$69.99</span></address>
+      <textarea readonly="readonly" class="code_area">40U2FB5O</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $69.99</strong> with promo code: <strong class="m_codes">40U2FB5O</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 04, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zSQd7n">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="11.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PFAeUO"><img src="https://m.media-amazon.com/images/I/81CWHWkTLvL._SR400,400_.jpg" alt="Phone Tripod" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PFAeUO">Phone Tripod, Flexible Cell Phone Tripod Adjustable Camera Stand Holder with Wireless Remote and Universal Clip 360°...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.24</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">25TK7OO7</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $14.99</strong> with promo code: <strong class="m_codes">25TK7OO7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 02, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2PFAeUO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="16.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NO10YE"><img src="https://m.media-amazon.com/images/I/71sJDzMSXxL._SR400,400_.jpg" alt="360 Degree Panoramic Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NO10YE">360 Degree Panoramic Camera Home Security Camera System 960P WiFi Camera for Home Monitoring Indoor Light Bulb Camera ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.49</span><span class="ori_price">$29.98</span></address>
+      <textarea readonly="readonly" class="code_area">45Q8WQQK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $29.98</strong> with promo code: <strong class="m_codes">45Q8WQQK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 04, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NO10YE">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UwY8R9"><img src="https://m.media-amazon.com/images/I/61JGMzf+9AL._SR400,400_.jpg" alt="Salt and Pepper Grinder Set" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2UwY8R9">Salt and Pepper Grinder Set, Cozzine Stainless Steel Salt and Pepper Shakers, Large Capacity, 5 Grade Adjustable Geramic Roor Salt Mill,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">40EF7566</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40EF7566</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 06, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2UwY8R9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="65.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LiRuLf"><img src="https://m.media-amazon.com/images/I/41CTncC9WOL._SR400,400_.jpg" alt="Nattork Air Fryer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LiRuLf">Nattork Air Fryer, 5.8 Quart Electric Hot Air Fryers with Recipes, 12-in-1 Oven Oilless Cooker with LCD Digital Screen and ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$65.99</span><span class="ori_price">$119.99</span></address>
+      <textarea readonly="readonly" class="code_area">452XHT7O</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $119.99</strong> with promo code: <strong class="m_codes">452XHT7O</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 29, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LiRuLf">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="9.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZT7Mik"><img src="https://m.media-amazon.com/images/I/71oQb7WULmL._SR400,400_.jpg" alt="Ultra-Bright LED Flashlight" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZT7Mik">Ultra-Bright LED Flashlight, Wsiiroon CREE XML-T6 LED Flashlight, Zoomable, IP65 Water-Resistant, Portable, 5 Light Modes...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.74</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">358OVNGX</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $14.99</strong> with promo code: <strong class="m_codes">358OVNGX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 04, 2019 at 02:00 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZT7Mik">Use Code at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="40" data-price="7.79">
   <div class="image_box">
