--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -1,14 +1,14 @@
 
 <!-- Main Categories One -->
-<div class="filter-node most_box most_main" data-filter='["Categories","Electronics"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2Ho1BMA" class="overlay-container" data-overlay-text="Electronics"><img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Electronics" class="overlay-img" /><p>Electronics</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Cell Phones & Accessories "]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/3249sXr" class="overlay-container" data-overlay-text="Cell Phones & Accessories  "><img src="https://images.unsplash.com/photo-1512499617640-c74ae3a79d37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Cell Phones & Accessories " class="overlay-img" /><p>Cell Phones & Accessories </p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Computers & Accessories"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2KY6JJy" class="overlay-container" data-overlay-text="Computers & Accessories"><img src="https://images.unsplash.com/photo-1542393545-10f5cde2c810?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Computers & Accessories" class="overlay-img" /><p>Computers & Accessories</p></a> 
 </div>
 <!-- End -->
@@ -60,15 +60,15 @@
 
 
 <!-- Main Categories Two -->
-<div class="filter-node most_box most_main" data-filter='["Categories","Appliances"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/3223G8Q" class="overlay-container" data-overlay-text="Appliances"><img src="https://images.unsplash.com/photo-1521732292260-b73d63a37f5b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Appliances" class="overlay-img" /><p>Appliances</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categories","Home & Kitchen"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2HG1c8D" class="overlay-container" data-overlay-text="Home & Kitchen"><img src="https://images.unsplash.com/photo-1556909172-54557c7e4fb7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Home & Kitchen" class="overlay-img" /><p>Home & Kitchen</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Tools & Home Improvement"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/32fazE7" class="overlay-container" data-overlay-text="Tools & Home Improvement"><img src="https://images.unsplash.com/photo-1562259929-b4e1fd3aef09?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Tools & Home Improvement" class="overlay-img" /><p>Tools & Home Improvement</p></a> 
 </div>
 <!-- End -->
@@ -114,15 +114,15 @@
 </div>
 
 <!-- Main Categories Three -->
-<div class="filter-node most_box most_main" data-filter='["Categories","Sports & Outdoors"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/341LfDd" class="overlay-container" data-overlay-text="Sports & Outdoors"><img src="https://images.unsplash.com/photo-1496055828681-8d699424c1c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Sports & Outdoors" class="overlay-img" /><p>Sports & Outdoors</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categories","Patio, Lawn & Garden"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/3211vCk" class="overlay-container" data-overlay-text="Patio, Lawn & Garden"><img src="https://images.unsplash.com/photo-1552458453-bd0dfedd9a32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Patio, Lawn & Garden" class="overlay-img" /><p>Patio, Lawn & Garden</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categories","Automotive"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2Hs5m3F" class="overlay-container" data-overlay-text="Automotive"><img src="https://images.unsplash.com/photo-1539799139339-50c5fe1e2b1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Automotive" class="overlay-img" /><p>Automotive</p></a> 
 </div>
 <!-- End -->
@@ -147,16 +147,36 @@
 <a target="_blank" href="https://amzn.to/32azjNo" class="overlay-container" data-overlay-text="Travel Pillows"><img src="https://images-na.ssl-images-amazon.com/images/I/61vtd5E4cvL._SX679_.jpg" alt="Travel Pillows" class="overlay-img" /><p>Travel Pillows</p></a> 
 </div>
 
+<div class="filter-node most_box" data-filter='["others","Car Care"]'>
+<a target="_blank" href="https://amzn.to/2ZKhbZr" class="overlay-container" data-overlay-text="Car Care"><img src="https://images.unsplash.com/photo-1560037962-467f95c052c9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Car Care" class="overlay-img" /><p>Car Care</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Car Exterior Accessories"]'>
+<a target="_blank" href="https://amzn.to/2MTSXtN" class="overlay-container" data-overlay-text="Car Exterior Accessories"><img src="https://images-na.ssl-images-amazon.com/images/I/41xBMFoW2hL._SX425_.jpg" alt="Car Exterior Accessories" class="overlay-img" /><p>Car Exterior Accessories</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Car Interior Accessories"]'>
+<a target="_blank" href="https://amzn.to/2ZKfknf" class="overlay-container" data-overlay-text="Car Interior Accessories"><img src="https://images.unsplash.com/photo-1526518604528-b927bd350668?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Car Interior Accessories" class="overlay-img" /><p>Car Interior Accessories</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["outdoor","Gardening"]'>
+<a target="_blank" href="https://amzn.to/2PJPksF" class="overlay-container" data-overlay-text="Gardening"><img src="https://images.unsplash.com/photo-1438109382753-8368e7e1e7cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gardening" class="overlay-img" /><p>Gardening</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["outdoor","Outdoor Décor"]'>
+<a target="_blank" href="https://amzn.to/2MW4skp" class="overlay-container" data-overlay-text="Outdoor Décor"><img src="https://images.unsplash.com/photo-1557312392-7c5db504db4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Outdoor Décor" class="overlay-img" /><p>Outdoor Décor</p></a> 
+</div>
+
 <!-- Main Categories Four -->
-<div class="filter-node most_box most_main" data-filter='["Categories","Office Products"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2Htu5Vf" class="overlay-container" data-overlay-text="Office Products"><img src="https://images.unsplash.com/photo-1456735190827-d1262f71b8a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Office Products" class="overlay-img" /><p>Office Products</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Kindle"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/327utjY" class="overlay-container" data-overlay-text="Kindle"><img src="https://images.unsplash.com/photo-1455541504462-57ebb2a9cec1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Kindle" class="overlay-img" /><p>Kindle</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categories","Book"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2NzhkMG" class="overlay-container" data-overlay-text="Book"><img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Book" class="overlay-img" /><p>Book</p></a> 
 </div>
 <!-- End -->
@@ -181,16 +201,36 @@
 <a target="_blank" href="https://amzn.to/2Lq0MnJ" class="overlay-container" data-overlay-text="Office Furniture & Lighting"><img src="https://images.unsplash.com/photo-1560264273-de4cfc40fd0d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Office Furniture & Lighting" class="overlay-img" /><p>Office Furniture & Lighting</p></a> 
 </div>
 
+<div class="filter-node most_box" data-filter='["others","Cookbooks"]'>
+<a target="_blank" href="https://amzn.to/2NLCfMN" class="overlay-container" data-overlay-text="Cookbooks"><img src="https://images.unsplash.com/photo-1546552580-9427ccb15af4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Cookbooks" class="overlay-img" /><p>Cookbooks</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Travel Books"]'>
+<a target="_blank" href="https://amzn.to/2N2CuDJ" class="overlay-container" data-overlay-text="Travel Books"><img src="https://images.unsplash.com/photo-1440778303588-435521a205bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Travel Books" class="overlay-img" /><p>Travel Books</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Childrens Books"]'>
+<a target="_blank" href="https://amzn.to/2HNlkFJ" class="overlay-container" data-overlay-text="Childrens Books"><img src="https://images.unsplash.com/photo-1469013078550-305e63b7c8f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Childrens Books" class="overlay-img" /><p>Childrens Books</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Romance books"]'>
+<a target="_blank" href="https://amzn.to/2NRW5G0" class="overlay-container" data-overlay-text="Romance books"><img src="https://images.unsplash.com/photo-1550176160-9ab168614a45?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Romance books" class="overlay-img" /><p>Romance books</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","History Books"]'>
+<a target="_blank" href="https://amzn.to/2LuU6F3" class="overlay-container" data-overlay-text="History Books"><img src="https://images.unsplash.com/photo-1504004581186-ec07a08d8256?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="History Books" class="overlay-img" /><p>History Books</p></a> 
+</div>
+
 <!-- Main Categories Five -->
-<div class="filter-node most_box most_main" data-filter='["Categories","Beauty"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2HuhmBQ" class="overlay-container" data-overlay-text="Beauty"><img src="https://images.unsplash.com/photo-1562887284-eb863165ebc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Beauty" class="overlay-img" /><p>Beauty</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Clothing, Shoes & Jewelry"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/33WGlqW" class="overlay-container" data-overlay-text="Clothing, Shoes & Jewelry"><img src="https://images.unsplash.com/photo-1441035844538-e2ce7dba066b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Clothing, Shoes & Jewelry" class="overlay-img" /><p>Clothing, Shoes & Jewelry</p></a> 
 </div>
 
- <div class="filter-node most_box most_main" data-filter='["Categories","Health & Household"]'>
+ <div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2Zvg13I" class="overlay-container" data-overlay-text="Health & Household"><img src="https://images.unsplash.com/photo-1506126613408-eca07ce68773?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Health & Household" class="overlay-img" /><p>Health & Household</p></a> 
 </div>
 <!-- End -->
@@ -215,7 +255,7 @@
 <a target="_blank" href="https://amzn.to/2NHIuB7" class="overlay-container" data-overlay-text="Foot, Hand & Nail Care"><img src="https://images.unsplash.com/photo-1534131270927-b0704a572b6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Foot, Hand & Nail Care" class="overlay-img" /><p>Foot, Hand & Nail Care</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["beauty","Health Care"]'>
+<!-- <div class="filter-node most_box" data-filter='["beauty","Health Care"]'>
 <a target="_blank" href="https://amzn.to/2UmzNxs" class="overlay-container" data-overlay-text="Health Care"><img src="https://images.unsplash.com/photo-1507761862811-98432ab53cde?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Health Care" class="overlay-img" /><p>Health Care</p></a> 
 </div>
 
@@ -233,7 +273,7 @@
 
 <div class="filter-node most_box" data-filter='["beauty","Supplements"]'>
 <a target="_blank" href="https://amzn.to/2zHna6t" class="overlay-container" data-overlay-text="Supplements"><img src="https://images.unsplash.com/photo-1558713057-d4b70b091888?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Supplements" class="overlay-img" /><p>Supplements</p></a> 
-</div>
+</div> -->
 
 <div class="filter-node most_box" data-filter='["beauty","Women Fashion"]'>
 <a target="_blank" href="https://amzn.to/2PJ0eie" class="overlay-container" data-overlay-text="Women Fashion"><img src="https://images.unsplash.com/photo-1559563458-527698bf5295?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Women Fashion" class="overlay-img" /><p>Women Fashion</p></a> 
@@ -256,15 +296,15 @@
 </div>
 
 <!-- Main Categories Six -->
-<div class="filter-node most_box most_main" data-filter='["Categories","Baby"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2HrW6N0" class="overlay-container" data-overlay-text="Baby"><img src="https://images.unsplash.com/photo-1508009219918-7d528f269841?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Baby" class="overlay-img" /><p>Baby</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Toys & Games"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/3211XAw" class="overlay-container" data-overlay-text="Toys & Games"><img src="https://images.unsplash.com/photo-1558877385-81a1c7e67d72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Toys & Games" class="overlay-img" /><p>Toys & Games</p></a> 
 </div>
 
-<div class="filter-node most_box most_main" data-filter='["Categories","Pet Supplies"]'>
+<div class="filter-node most_box most_main" data-filter='["Categories","Categories"]'>
   <a target="_blank" href="https://amzn.to/2NzEjYa" class="overlay-container" data-overlay-text="Pet Supplies"><img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Pet Supplies" class="overlay-img" /><p>Pet Supplies</p></a> 
 </div>
 <!-- End -->
@@ -295,4 +335,16 @@
 
 <div class="filter-node most_box" data-filter='["tech","Gaming Mouse"]'>
   <a target="_blank" href="https://amzn.to/2KScLLT" class="overlay-container" data-overlay-text="Gaming Mouse"><img src="https://images.unsplash.com/photo-1553486113-1a936f2d0e9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Mouse" class="overlay-img" /><p>Gaming Mouse</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Dogs"]'>
+<a target="_blank" href="https://amzn.to/2ZQ9l0a" class="overlay-container" data-overlay-text="Dogs"><img src="https://images.unsplash.com/photo-1529472119196-cb724127a98e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Dogs" class="overlay-img" /><p>Dogs</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Cats"]'>
+<a target="_blank" href="https://amzn.to/2LirS1b" class="overlay-container" data-overlay-text="Cats"><img src="https://images.unsplash.com/photo-1513360371669-4adf3dd7dff8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Cats" class="overlay-img" /><p>Cats</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Birds"]'>
+<a target="_blank" href="https://amzn.to/2Ll0Jef" class="overlay-container" data-overlay-text="Birds"><img src="https://images.unsplash.com/photo-1518001589401-1743b61d1def?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Birds" class="overlay-img" /><p>Birds</p></a> 
 </div>
