--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "Categories Of Coolest Products" %>
 <header id="header">
-  <%= render 'shared/header' %> 
+  <%= render 'shared/header_short' %> 
 </header>
 
 <div class="category_wrap clearfix">
   <div class="wrap">
-    <h2>Categories</h2>
+    <h2>CATEGORIES</h2>
     
     <!-- <div class="cateogry_box">
       <a href="/blogs/gadget_test">
@@ -15,9 +15,9 @@
     </div> -->
 
     <div class="cateogry_box">
-      <a href="/gadgets?category=Gadgets">
+      <a href="/gadgets?category=Tech & Electronic">
         <img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
-        <div class="centered">GADGETS</div>
+        <div class="centered">TECH & LECTRONIC</div>
       </a>
     </div>
 
