--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Categories Of Coolest Products" %>
 <div class="layout"><!--layout-->
 
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
     
   <!-- for play youtube video-->
   <%= render 'shared/play_video' %>
@@ -10,7 +10,7 @@
     <div class="wrap">
       <main class="clearfix">
         
-          <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
+         <!--  <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
           <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
           <section id="filter">
             <div class="ui-group">
@@ -27,15 +27,17 @@
               <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
             </div>
           </section>
-          <div class="gnb_kbg"></div>
+          <div class="gnb_kbg"></div> -->
 
           <div class="on_gadgets">
             
               <div class="current_category">
                 <% if params[:category].present? %>
-                  <p><%= params[:category] %></p>
+                  <span>- <%= params[:category] %> GADGETS -</span>
+                  <p><%= link_to "All categories", categories_path %></p>
                 <% else %>
-                  <p>all gadgets</p>
+                  <span>- Everything -</span>
+                  <p><%= link_to "All categories", categories_path %></p>
                 <% end %>
               </div>
               <div class="card_wrap clearfix" >
