--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -33,7 +33,7 @@
             
               <div class="current_category">
                 <% if params[:category].present? %>
-                  <span>- <%= params[:category] %> GADGETS -</span>
+                  <span>- <%= params[:category] %> -</span>
                   <p><%= link_to "All categories", categories_path %></p>
                 <% else %>
                   <span>- Everything -</span>
