--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,7 +15,7 @@
     </div> -->
 
     <div class="cateogry_box">
-      <a href="/gadgets?category=Tech & Electronic">
+      <a href="/gadgets?category=Gadgets">
         <img src="https://images.unsplash.com/photo-1468495244123-6c6c332eeece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
         <div class="centered">TECH & LECTRONIC</div>
       </a>
