--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -30,3 +30,5 @@
   .category_wrap .cateogry_box a .centered{font-size:30px;}
 }
 
+
+.subcategory_wrap{margin-top:300px;font-family: 'Montserrat', sans-serif;font-weight:bold;}
