--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,94 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="30" data-price="59.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31c61yd"><img src="https://m.media-amazon.com/images/I/61dpIp+yeML._SR400,400_.jpg" alt="Eureka Instant Clear 26' NEA120 Purifier" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31c61yd">Eureka Instant Clear 26' NEA120 Purifier, 3-in-1 True HEPA Air Cleaner with Carbon Activated Filter and UV LED,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$59.70</span><span class="ori_price">$85.28</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">30NEA120</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $85.28</strong> with promo code: <strong class="m_codes">30NEA120</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 09, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31c61yd">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="11.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zZsOkQ"><img src="https://m.media-amazon.com/images/I/7133Dz55ZZL._SR400,400_.jpg" alt="CAMEL CROWN Convertible Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zZsOkQ">CAMEL CROWN Convertible Backpack for Men/Women Messenger Bag Laptop Backpacks Multi-Function Daypack Fits 15.6 Inch Laptop</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.20</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">60IF8ODE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $27.99</strong> with promo code: <strong class="m_codes">60IF8ODE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zZsOkQ">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZV1PB8"><img src="https://m.media-amazon.com/images/I/61wY8rJFg0L._SR400,400_.jpg" alt="White Noise Sound Machines" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZV1PB8">White Noise Sound Machines for Sleeping with 8 Natural Soothing Sounds - Portable Sleep Sound Therapy for Home Office</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">50S4W9G7</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50S4W9G7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZV1PB8">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="11.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N08iJ5"><img src="https://m.media-amazon.com/images/I/51DlaJGsZbL._SR400,400_.jpg" alt="Poweriver 2 in 1 Charger Powerbank" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N08iJ5">Poweriver 2 in 1 Charger Powerbank, MetaPower with 2 Port, 5000mAh 2.1A 18W, Foldable Plug, Flashlight for Travel,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.25</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">55XTPA3P</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $24.99</strong> with promo code: <strong class="m_codes">55XTPA3P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 27, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2N08iJ5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/312gwE4"><img src="https://m.media-amazon.com/images/I/61OG4S3oJLL._SR400,400_.jpg" alt="Wireless Earphones Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/312gwE4">Wireless Earphones Bluetooth Headphones 100H Play time Deep Bass Stereo Sound Wireless Headphones Built-in Mic...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$44.98</span></address>
+      <textarea readonly="readonly" class="code_area">56J7PCKP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>56% off at $44.98</strong> with promo code: <strong class="m_codes">56J7PCKP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/312gwE4">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="13.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Lshzq9"><img src="https://m.media-amazon.com/images/I/51914qRriyL._SR400,400_.jpg" alt="VIKEFON Aptx Low Latency USB Bluetooth Audio Transmitter" /></a>
